<resources>
    <string name="app_name">RedRockExam</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="please_input">请输入账户</string>
    <string name="plese_input_pass">请输入密码</string>
    <string name="inputagain">请再次输入</string>
    <string name="toOut">退出</string>
    <string name="hello_word">hello_word</string>
    <string name="start_new">开启新任务</string>
    <string name="new_ask">新任务</string>
    <string name="input_new_tag">输入新分类名</string>
    <string name="add_tag">设置标签</string>
    <string name="add_title">设置标题</string>
    <string name="add_content">输入内容</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="set_start">设置开始时间</string>
    <string name="search">搜索</string>
    <string name="start_times">开始时</string>
    <string name="app_names">MyList</string>

</resources>