<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.TaskActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@mipmap/ic_back_white"
        app:title="新建" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="237dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="310dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="387dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="475dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="154dp"
        android:layout_height="126dp"
        android:src="@drawable/welcome_image"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/et_addContent"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"

        android:gravity="center"
        android:hint="@string/add_content"
        android:inputType="textMultiLine"
        android:background="@drawable/shape_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />

    <EditText
        android:id="@+id/et_startTime"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/shape_button"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/start_time"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="563dp" />

    <EditText
        android:id="@+id/et_addTitile"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/add_title"
        android:inputType="textPersonName"
        android:background="@drawable/shape_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_addTag" />

    <EditText
        android:id="@+id/et_addTag"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/add_tag"
        android:inputType="textPersonName"
        android:background="@drawable/shape_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <EditText
        android:id="@+id/et_endTime"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/shape_button"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/end_time"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="659dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/flABtn_add"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/pink"
        android:clickable="true"
        android:src="@drawable/add"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="311dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_addTime"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="4dp"
        android:alpha="0.8"
        android:backgroundTint="@color/hypergreen"
        android:text="@string/start_times"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="26dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/et_startTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_endTime"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="96dp"
        android:layout_height="43dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="1dp"
        android:alpha="0.8"
        android:backgroundTint="@color/hypergreen"
        android:text="@string/end_time"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="26dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/et_endTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />
</androidx.constraintlayout.widget.ConstraintLayout>